fix(Item visibility): <Item /> visibility changed according to new backend

--- a/frontend-only/src/pages/styles/Item/Item.scss
+++ b/frontend-only/src/pages/styles/Item/Item.scss
@@ -8,6 +8,12 @@
     position: relative;
 }
 
+.itemCard__empty {
+    font-size: 60px;
+    margin: 150px 0;
+    text-align: center
+}
+
 .itemCard__navigation {
     @include buttonNormalize;
     font-size: 40px;
